changed link styles, hopefully fixed overlaps, centered nav ffs

--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -34,6 +34,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 body {
   color: #fff;
@@ -77,17 +78,32 @@ body {
   margin-bottom: 0;
 }
 
+.tel-link {
+  padding: .25rem 0;
+  font-weight: bold;
+  color: rgba(255,255,255,1);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+  border-bottom-color: rgba(255,255,255,.33);
+}
+.tel-link:hover,
+.tel-link:focus {
+  text-decoration: none;
+  border-bottom-color: rgba(255,255,255,1);
+}
+
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: bold;
   color: rgba(255,255,255,1);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
+  border-bottom-color: rgba(255,255,255,.33);
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255,255,255,.25);
+  border-bottom-color: rgba(255,255,255,1);
 }
 
 .nav-masthead .nav-link .nav-link-word-dis {
@@ -111,10 +127,6 @@ body {
 @media (min-width: 48em) {
   .masthead-brand {
     float: left;
-  }
-  .nav-masthead {
-    float: right;
-
   }
 }
 
